kubernetes/devops-api-stack/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: devops-api
  labels:
    app.kubernetes.io/name: devops-api-stack
    app.kubernetes.io/part-of: devops-api-stack
