kubernetes/devops-api-stack/base/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app.kubernetes.io/name: devops-api
    app.kubernetes.io/instance: devops-api
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: devops-api-stack
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: devops-api
    app.kubernetes.io/instance: devops-api
  ports:
    - name: http
      port: 8080
      targetPort: http
