kubernetes/devops-api-stack/base/networkpolicy-backend-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-nginx-to-backend
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: devops-api
      app.kubernetes.io/instance: devops-api
      app.kubernetes.io/component: backend

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
              app.kubernetes.io/instance: ingress-nginx
              app.kubernetes.io/component: controller
      ports:
        - protocol: TCP
          port: 8080
