kubernetes/devops-api-stack/base/networkpolicy-postgres.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-postgres
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgres
      app.kubernetes.io/instance: devops-api
      app.kubernetes.io/component: database

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: devops-api
              app.kubernetes.io/instance: devops-api
              app.kubernetes.io/component: backend
      ports:
        - protocol: TCP
          port: 5432
